# fire-visualizer

./: .env  README.md  docker-compose.yml
hotspots-api/: .env  build.sh  pyproject.toml
hotspots-api/dockersetup/: .env  Dockerfile  docker-compose.yml
hotspots-api/src/: main.py
hotspots-api/src/hotspots_api/: config.py  crud.py  database.py  main.py  models.py  schemas.py
visualizer/: build.sh  pyproject.toml
visualizer/dockersetup/: .env  Dockerfile  docker-compose.yml
visualizer/src/: .flaskenv  config.py  main.py
visualizer/src/visualizer/: __init__.py
visualizer/src/visualizer/core/: views.py
visualizer/src/visualizer/error_pages/: handlers.py
visualizer/src/visualizer/static/resources/css/: styles.css
visualizer/src/visualizer/static/resources/js/: hotspots.js
visualizer/src/visualizer/templates/: base.html  home.html
visualizer/src/visualizer/templates/error_pages/: 403.html  404.html  500.html
visualizer/src/visualizer/templates/parts/: footer.html  head.html  nav.html  no_script.html  script_footer.html
