[tool.poetry]
name = "visualizer"
version = "0.1.0"
description = ""
authors = ["yahuarlocro <yahuarlocro@tutanota.com>"]
readme = "README.md"
packages = [{include = "visualizer", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
flask = "2.3.2"
python-dotenv = "1.0.0"
jinja2 = "3.1.2"
requests = "2.31.0"
gunicorn = "20.1.0"


[tool.poetry.group.dev.dependencies]
yapf = "0.33.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
